Fix help and click coordinates widgets overlapping

--- a/apps/ts-move-in-out-angular/src/styles.scss
+++ b/apps/ts-move-in-out-angular/src/styles.scss
@@ -472,9 +472,6 @@ input[type='email'] {
 }
 
 .help {
-  position: fixed;
-  bottom: 0.75rem;
-  left: 1rem;
   height: 1rem;
   width: 1rem;
   z-index: 1;
